--- a/css/main.css
+++ b/css/main.css
@@ -64,8 +64,7 @@ footer {
   }
 
   .col-3 {
-    width: 33.33%;
-    height: 640px;
+    width: 50%;
 }
 
   #column-1 {
@@ -78,6 +77,7 @@ footer {
 
   #column-3 {
     background-color: #17efff;
+    width: 100%;
   }
 
   footer {
@@ -94,8 +94,7 @@ footer {
   }
 
   .col-3 {
-    width: 33.33%;
-    height: 320px;
+    width: 33.3%;
 }
 
   #column-1 {
@@ -108,6 +107,7 @@ footer {
 
   #column-3 {
     background-color: #73c3ff;
+    width: 33.3%
   }
 
   footer {
